--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="bg-white rounded-2xl shadow-xl overflow-hidden">
         <div class="login-container py-8 px-6 text-center">
           <div class="flex justify-center mb-4">
-            <img src="D:\daisy webpage\logo.JPEG" alt="Timoga Springs Logo" class="h-16 w-16 object-contain rounded-full border-2 border-white">
+            <img src="logo.JPEG" alt="Timoga Springs Logo" class="h-16 w-16 object-contain rounded-full border-2 border-white">
           </div>
           <h2 class="text-3xl font-bold text-white">Welcome Back</h2>
           <p class="text-blue-100 mt-2">Sign in to your Timoga Springs account</p>
